--- a/style.css
+++ b/style.css
@@ -1,63 +1,96 @@
-body{
-    background-color: #2C3639 !important;
-    font-family: "DM Serif Text", serif;
-    font-weight: 400;
-    font-style: italic;
-    color: #DCD7C9;
+body {
+    background-color:#EEE2DF;
+    font-family: Heiti SC;
+    color: white;
 }
-nav {
-    background-color: #3F4E4F !important;
-    margin-top: 20px;
-    margin-left: 50px;
-    margin-right: 50px;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    opacity: 0.895;
+
+.navbar {
+    background-color: #7D8570;
+    border: 5px solid #646F58;
 }
-.nav-item, .nav-link {
-    margin-left: 43px;
-    margin-right: 43px;
-    text-align: center;
-    color: #DCD7C9 !important;
-    transform: scale(1.1);
+
+.nav-link {
+    color: antiquewhite;
 }
-.nav-link:hover {
-    color: #A27B5C !important;
-    transform: scale(1.196);
-    transition: 1.5s;
+
+.logo1{
+    width:50px;
+    margin:10px;
 }
-main {
-    margin: 70px auto;
-    margin-left: 50px;
-    margin-right: 50px;
-    background-color: #3F4E4F;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    padding: 20px;
-    opacity: 0.9;
-    text-align: center;
+
+.header{
+    text-align:center;
+    color:white;
 }
-#BUTTON {
-    background-color: #222831;
-    color: #DCD7C9;
-    border: none;
-    padding: 10px 10px;
-    border-radius: 10px;
-    font-size: 16px;
+
+.body-container{
+    background-color: rgba(0, 0, 0, .6);
+    padding: 50px;
+    margin-bottom: 20px;
+    margin-top:100px;
+    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+}
+
+.card {
+    margin: 20px;
+    padding:8px;
+    background-color: #AFBE8F;
+    border-radius: 25px;
+    border: 5px solid #7D8570;
+    color: #3E363F;
+}
+
+.accountcard {
+    text-align:center;
+
+}
+
+.accountinput{
+    margin:15px;
+}
+
+img{
+	width: 100px;
+	border-radius:70px;
+	border: 5px solid gray;
+    margin:10px;
 }
 
 
-footer {
-    background-color: #3F4E4F;
-    color: #DCD7C9;
+select{
+    margin:10px;
+}
+
+.footer {
+    font-family: courier;
     text-align: center;
-    padding: 10px 0;
+    color: white;
+    background-color: rgba(0, 0, 0, .6);
+    bottom: 0;
     position: fixed;
     width: 100%;
-    bottom: 0;
-    opacity: 0.5;
+    height: 4%;
+}
+
+.intrams-img {
+    width: 600px;
+    border: 5px solid gray;
+    margin: auto;
+}
+
+.title {
+    text-align: center;
+    background-color: #AFBE8F;
+    border-radius: 25px;
+    border: 5px solid #7D8570;
+    color: #504B3A;
+    font-family: courier;
+}
+
+h3, h2, h1{
+    font-family:courier
+}
+
+h4{
+    margin:20px;
 }
